--- a/src/index.html
+++ b/src/index.html
@@ -43,12 +43,12 @@
           <input class="checkbox checkbox-item-new" name="checkbox-item-new" type="checkbox">
         </label>
         <label class="label label-item-dont-to-make-empty">
-          <p class="label-header">Не грузить под ноль</p>
+          <p class="label-header">Равномерная отгрузка</p>
           <input class="checkbox checkbox-item-dont-to-make-empty" name="checkbox-item-dont-to-make-empty" type="checkbox">
         </label>
         <label class="label label-item-not-warehouse">
           <p class="label-header">Не грузить со складов</p>
-          <input class="checkbox checkbox-item-not-warehouse" name="checkbox-item-not-warehouse" type="checkbox">
+          <input class="checkbox checkbox-item-not-warehouse" name="checkbox-item-not-warehouse" type="checkbox" checked>
         </label>
         <button type="submit" class="button button-auto-submit disabled" name="button-auto-submit" disabled>
           ОК
