Добавил секцию с общей инфой о товаре

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,62 @@
       </form>
     </section>
     <section class="section section-total-info">
-  
+      <div class="section-total-info__warehouses">
+        <h2 class="section-total-info__title section-title">
+          Наличие на складах
+        </h2>
+        <table class="section-total-info__table table table-warehouses">
+          <tr class="table-warehouses-row section-total-info__table-row">
+            <td class="table-warehouses-cell table-cell-name section-total-info__table-cell">
+              Пермь Склад
+            </td>
+            <td class="table-warehouses-cell table-cell-value section-total-info__table-cell">
+            </td>
+          </tr>
+          <tr class="table-warehouses-row section-total-info__table-row">
+            <td class="table-warehouses-cell table-cell-name section-total-info__table-cell">
+              Екатеринбург Склад
+            </td>
+            <td class="table-warehouses-cell table-cell-value section-total-info__table-cell">
+            </td>
+          </tr>
+          <tr class="table-warehouses-row section-total-info__table-row">
+            <td class="table-warehouses-cell table-cell-name section-total-info__table-cell">
+              Челябинск Склад
+            </td>
+            <td class="table-warehouses-cell table-cell-value section-total-info__table-cell">
+            </td>
+          </tr>
+          <tr class="table-warehouses-row section-total-info__table-row">
+            <td class="table-warehouses-cell table-cell-name section-total-info__table-cell">
+              Сургут ТП
+            </td>
+            <td class="table-warehouses-cell table-cell-value section-total-info__table-cell">
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="section-total-info__shops">
+        <h2 class="section-total-info__title section-title">
+          Наличие на филиалах
+        </h2>
+        <table class="section-total-info__table table table-shops">
+          <tr class="table-shops-row section-total-info__table-row">
+            <td class="table-shops-cell table-cell-name section-total-info__table-cell">
+              Итого на филиалах
+            </td>
+            <td class="table-shops-cell table-cell-value section-total-info__table-cell">
+            </td>
+          </tr>
+          <tr class="table-shops-row section-total-info__table-row">
+            <td class="table-shops-cell table-cell-name section-total-info__table-cell">
+              Из них не на витринах
+            </td>
+            <td class="table-shops-cell table-cell-value section-total-info__table-cell">
+            </td>
+          </tr>
+        </table>
+      </div>
     </section>
     <section class="section section-shipping-info">
   
