Добавил блок со статусом отгрузок

--- a/src/index.html
+++ b/src/index.html
@@ -114,10 +114,22 @@
       </div>
     </section>
     <section class="section section-shipping-info">
-  
+      
+      <table class="section-shipping-info__table table table-total">
+        <tr class="table-total-row section-shipping-info__table-row">
+          <td class="table-shipping-cell table-cell-name section-shipping-info__table-cell">
+            Будет отгружено
+          </td>
+          <td class="table-shipping-cell table-cell-value section-shipping-info__table-cell">
+            0
+          </td>
+        </tr>
+      </table>
+      <p class="section-shipping-info__status text-error">
+      </p>
+      <p class="section-shipping-info__error text-error"></p>
     </section>
   </div >
-
   <section class="section section-result">
     <table class="table table-result">
       <tr class="table-row-headers">
