--- a/src/index.html
+++ b/src/index.html
@@ -140,6 +140,15 @@
         <th class="table-header table-header-shipping-value">Кол-во</th>
       </tr>
     </table>
+    <div class="section-result-cover">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+        <g stroke="#292D32" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
+          <path fill="transparent" d="M22 11.1V6.9C22 3.4 20.6 2 17.1 2h-4.2C9.4 2 8 3.4 8 6.9V8h3.1c3.5 0 4.9 1.4 4.9 4.9V16h1.1c3.5 0 4.9-1.4 4.9-4.9Z" opacity=".4"/>
+          <path fill="transparent" d="M16 17.1v-4.2C16 9.4 14.6 8 11.1 8H6.9C3.4 8 2 9.4 2 12.9v4.2C2 20.6 3.4 22 6.9 22h4.2c3.5 0 4.9-1.4 4.9-4.9Z"/>
+          <path class="svg-check-icon hidden" fill="transparent" d="m6.08 15 1.95 1.95 3.89-3.9"/>
+        </g>
+      </svg>
+    </div>
   </section>
   <template id="shopListRowTemplate">
     <tr class="table-row">
@@ -151,7 +160,7 @@
     </tr>
   </template>
   <template id="resultRowTemplate">
-    <tr class="table-row">
+    <tr class="table-row result-table-row">
       <td class="table-data table-data-shop-shipper-name"></td>
       <td class="table-data table-data-shop-shipper-id"></td>
       <td class="table-data table-data-shop-reciever-id"></td>
