--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Excel</title>
+  <title>Помощник создания массовых отгрузок</title>
+  <link rel="shortcut icon" href="<%=require('./images/favicon.svg')%>" type="image/x-icon">
 </head>
 <body class="page">
   <dialog class="dialog-add-file">
